[gd_scene load_steps=2 format=3 uid="uid://bnnxmjxkdm565"]

[ext_resource type="Script" path="res://scripts/japanese/rhythm_conductor.gd" id="1_tmelx"]

[node name="RhythmConductor" type="AudioStreamPlayer"]
script = ExtResource("1_tmelx")

[node name="StartTimer" type="Timer" parent="."]

[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
